<?xml version="1.0"?>
<package format="3">

  <name>etsi_its_rviz_plugins</name>
  <version>3.3.0</version>
  <description>RViz plugins for etsi_its_messages</description>

  <maintainer email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</maintainer>
  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>
  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <license>MIT</license>

  <depend>ros_environment</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rviz_ogre_vendor</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_export_depend>rviz_ogre_vendor</build_export_depend>
  <depend>etsi_its_cam_msgs</depend>
  <depend>etsi_its_cpm_ts_msgs</depend>
  <depend>etsi_its_denm_msgs</depend>
  <depend>etsi_its_mapem_ts_msgs</depend>
  <depend>etsi_its_spatem_ts_msgs</depend>
  <depend>etsi_its_msgs_utils</depend>
  <depend>pluginlib</depend>
  <depend>python3-pyproj</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>
  <exec_depend>rviz_satellite</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
