<?xml version="1.0"?>
<package format="3">
  <name>executor_demo</name>
  <version>0.1.0</version>
  <description>Demonstrates ROS 2 executors and callback groups.</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <export/>
</package>
