<?xml version="1.0"?>
<package format="3">
  <name>etsi_its_coding</name>
  <version>1.0.0</version>
  <description>C++ compatible source code from ASN.1 ETSI ITS Messages generated with asn1c</description>

  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>

  <license>TODO</license>

  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>

  <depend>ros_environment</depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>etsi_its_cam_coding</exec_depend>

  <export>
    <metapackage condition="$ROS_VERSION == 1"/>
  </export>

</package>
