<?xml version="1.0"?>
<package format="3">
  <name>etsi_its_conversion</name>
  <version>0.1.0</version>
  <description>Bi-directionally converts ROS messages to and from ASN1-encoded ETSI messages</description>

  <maintainer email="lennart.reiher@ika.rwth-aachen.de">Lennart Reiher</maintainer>
  <maintainer email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</maintainer>

  <license>TODO</license>

  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>

  <depend>udp_msgs</depend>
  <depend>etsi_its_cam_conversion</depend>
  <depend>etsi_its_denm_conversion</depend>
  <depend>ros_environment</depend>
  <depend>std_msgs</depend>

  <!-- ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">nodelet</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslaunch</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <nodelet condition="$ROS_VERSION == 1" plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
