<?xml version="1.0"?>
<package format="3">

  <name>etsi_its_conversion</name>
  <version>3.0.0</version>
  <description>Converts ROS messages to and from ASN.1-encoded ETSI ITS messages</description>

  <maintainer email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</maintainer>
  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>
  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <license>MIT</license>

  <depend>etsi_its_cam_conversion</depend>
  <depend>etsi_its_cam_ts_conversion</depend>
  <depend>etsi_its_cpm_ts_conversion</depend>
  <depend>etsi_its_denm_conversion</depend>
  <depend>etsi_its_mapem_ts_conversion</depend>
  <depend>etsi_its_spatem_ts_conversion</depend>
  <depend>etsi_its_vam_ts_conversion</depend>
  <depend>ros_environment</depend>
  <depend>std_msgs</depend>
  <depend>udp_msgs</depend>

  <!-- ROS 2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>

  <!-- ROS -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">nodelet</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <nodelet condition="$ROS_VERSION == 1" plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
