<?xml version="1.0"?>
<package format="3">

  <name>etsi_its_conversion</name>
  <version>3.2.1</version>
  <description>Converts ROS messages to and from ASN.1-encoded ETSI ITS messages</description>

  <maintainer email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</maintainer>
  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>
  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <license>MIT</license>

  <depend>etsi_its_cam_conversion</depend>
  <depend>etsi_its_cam_ts_conversion</depend>
  <depend>etsi_its_cpm_ts_conversion</depend>
  <depend>etsi_its_denm_conversion</depend>
  <depend>etsi_its_denm_ts_conversion</depend>
  <depend>etsi_its_mapem_ts_conversion</depend>
  <depend>etsi_its_mcm_uulm_conversion</depend>
  <depend>etsi_its_spatem_ts_conversion</depend>
  <depend>etsi_its_vam_ts_conversion</depend>  <depend>std_msgs</depend>
  <depend>udp_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
