<?xml version="1.0"?>
<package format="3">

  <name>etsi_its_mcm_uulm_conversion</name>
  <version>3.2.1</version>
  <description>Conversion functions for converting ROS messages to and from ASN.1-encoded UULM draft MCMs (TS)</description>

  <maintainer email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</maintainer>
  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>
  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <license>MIT</license>

  <depend>etsi_its_mcm_uulm_coding</depend>
  <depend>etsi_its_mcm_uulm_msgs</depend>
  <depend>etsi_its_primitives_conversion</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
