<?xml version="1.0"?>
<package format="3">
  <name>etsi_its_primitives_conversion</name>
  <version>1.0.0</version>
  <description>Conversion of primitive data types</description>

  <maintainer email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</maintainer>

  <license>TODO</license>

  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>

  <depend>ros_environment</depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!-- ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
